@@ -1,6 +1,7 @@
 2011-05-10 Tolleiv Nietsch <nietsch@aoemedia.de> 
 
-	* Fixed bug: #7617: 18100: One 4.2 hack left over in mod2/index.php (Thanks to Bjorn Pedersen)
+	* Fixed bug: #18098: Link to db_list.php is deprecated in Typo3 4.5 (Thanks to Daniel Minder)
+	* Fixed bug: #18100: One 4.2 hack left over in mod2/index.php (Thanks to Bjorn Pedersen)
 
 2011-03-25 Tolleiv Nietsch <nietsch@aoemedia.de> 
 
